# gameboy_xl

./: BOM__todo.txt  README.md
3D/non-touch/: gameboy_xl_case_bottom.step  gameboy_xl_case_bottom.stl  gameboy_xl_case_top.step  gameboy_xl_case_top.stl  gameboy_xl_lcd_brace_angled.step  gameboy_xl_lcd_brace_angled.stl
3D/touch/: gameboy_xl_touch_case_bottom.step  gameboy_xl_touch_case_bottom.stl  gameboy_xl_touch_case_top.step  gameboy_xl_touch_case_top.stl  gameboy_xl_touch_lcd_brace.step  gameboy_xl_touch_lcd_brace.stl
BOM/: BOM_GAMEBOY2LCD_RP2040_2023-06-22.csv  BOM_GAMEBOY_BAREBONES_DMG_21pin_2023-06-22.csv  BOM_GAMEBOY_BAREBONES_DMG_21pin_SMD_2023-06-22.csv  BOM_LIPO_CHARGE_W_5VOUT_2023-06-22.csv  BOM_SK-22F02 G10 Bar breakout_2023-06-22.csv  BOM_USB-C Breakout_2023-06-22.csv  BOM_gameboy xl amp volume and bluetooth --pam8403_2023-06-22.csv
code/non-touch/: CMakeLists.txt  colors.c  colors.h  gameboy_xl.c  osd.h
code/touch/: CMakeLists.txt  colors.c  gameboy_xl_touch.c  osd.c  osd.h  touch.c  touch.h
firmware/non-touch/: gameboy_xl_v2.uf2
firmware/touch/: gameboy_xl_touch_v2.uf2
